[package]
name = "rene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.35.0"
image = "0.23.14"
bytemuck = "1.7.2"
rand = "0.8.4"
glam = "0.20"
rene-shader = { path = "../rene-shader" }
pbrt-parser = { path = "../pbrt-parser" }
clap = { version = "3.0.0", features = ["derive"] }
thiserror = "1.0.30"
nom = "7.1.0"
log = "0.4.14"
simple_logger = "1.16.0"
blackbody = "0.0.0"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
